# msgpass

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: mp_buf.h  mp_common.h  mp_executor.h  mp_log.h  mp_portable.h  mp_protocol.h  mp_queue.h
include/os/: os_process.h  os_socket.h  os_thread.h  os_time.h
src/: mp_buf.c  mp_client.c  mp_client_state.c  mp_client_state.h  mp_dispatcher.c  mp_dispatcher.h  mp_executor.c  mp_log.c  mp_protocol.c  mp_queue.c  mp_server.c  mp_server_mt.c  mp_server_st.c
src/os/: os_process_posix.c  os_process_win32.c  os_socket_posix.c  os_socket_win32.c  os_thread_posix.c  os_thread_win32.c  os_time.c
tests/: stress_test.sh  test_buf.c  test_executor.c  test_protocol.c  test_queue.c  test_runner.h
